# opening-hours-demo

./: .gitignore  Cargo.toml  Trunk.toml  extra-4d045563856093b8.css  index.html  model.html  opening-hours-demo-159e01b74220dd0e.js  opening-hours-demo-159e01b74220dd0e_bg.wasm  opening-hours-demo-228aeb85b6f0ee2b.js  opening-hours-demo-228aeb85b6f0ee2b_bg.wasm  opening-hours-demo-28b295c33d6a16cd.js  opening-hours-demo-28b295c33d6a16cd_bg.wasm  opening-hours-demo-36b3b62167a03ff4.js  opening-hours-demo-36b3b62167a03ff4_bg.wasm  opening-hours-demo-6af447c20962d0e0.js  opening-hours-demo-6af447c20962d0e0_bg.wasm  opening-hours-demo-859036579c71f40b.js  opening-hours-demo-859036579c71f40b_bg.wasm  opening-hours-demo-9608c2e917b6cb2a.js  opening-hours-demo-9608c2e917b6cb2a_bg.wasm  opening-hours-demo-9d5e9d0c99564f77.js  opening-hours-demo-9d5e9d0c99564f77_bg.wasm  opening-hours-demo-c98b9958706288e9.js  opening-hours-demo-c98b9958706288e9_bg.wasm  opening-hours-demo-ca2941e8e8c5261d.js  opening-hours-demo-ca2941e8e8c5261d_bg.wasm  opening-hours-demo-d43844173a883253.js  opening-hours-demo-d43844173a883253_bg.wasm  shell.nix  style-138bfac2ceaf7506.css  style-85ce403ae29c26ab.css  style-88007b3f5caaa9eb.css  style-88f3ec8cf0d9ace6.css  style-8f4d8e333ce3fd74.css  style-a8bd09a105e3a232.css  style.css
.github/workflows/: deploy.yml
src/: eval.rs  links.rs  main.rs  parse.rs  utils.rs
src/component/: expression.rs  icon.rs  mod.rs  popup.rs
src/section/: context_form.rs  examples.rs  footer.rs  information.rs  mod.rs  properties.rs  (+2 more)
static/: extra.css  style.css
